--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -5819,10 +5819,21 @@ von den anderen Inhalten zu betrachten.
     $f(X)= X^{4}+X+1$. Allerdings ist $X^{4}+X^{2}+1= (X^{2}+X-1)(X^{2}-X+1)$.
   \end{enumerate}
  \item Sei $K$ ein Körper und $f\in K[X]$ vom Grad 3. Zeigen Sie: $f$ ist
-  genau dann irreduzibel, wenn es keine Wurzel in $K$ hat.
- \item Seien $f,g\in K[X]$. Berechnen Sie $\deg(f\circ g)$.
- \item Zeigen Sie, dass die POlynome $X^{4}+1$ und $X^{6}+X^{3}+1$ irreduzibel
-  in $\Q[X]$ sind.
+  genau dann irreduzibel, wenn es keine Wurzel in $K$ hat.\\
+  Es gilt: $f$ hat die Nullstelle $y\in K\Leftrightarrow
+  f(y)=0\Leftrightarrow(X-y)\mid f\Leftrightarrow f$ reduzibel.
+ \item Seien $f,g\in K[X]$. Berechnen Sie $\deg(f\circ g)$.\\
+  Siehe Fakt direkt nach der Definition des Grades eines Polynoms.
+ \item Zeigen Sie, dass die Polynome $X^{4}+1$ und $X^{6}+X^{3}+1$ irreduzibel
+  in $\Q[X]$ sind.\\
+  Wir wissen, dass $e^{ik\nicefrac{\pi}{4}}$ für $k=2n+1, n\in\N$ Nullstelle
+  von $X^{4}+1$ ist. Weiter ist, $X^{4}+1= (aX^{2}+bX+c)(X^{2}+pX+q)= aX^{4}+
+  (b+ap)X^{3}+ (c+pb+aq)X^{2}+ (pc+qb)X+qc$. Wir haben $a=0$ und aus $a+0p=0$
+  folgt sofort, $a=-p$. Einsetzen ergibt: $pc+qb= pc-qp= p(c-q)=0$. Sei $p=0$.
+  Dann ist $c+pb+aq=c+q=0\Rightarrow c=-q$ \lightning{} wegen $qc=1$. Also
+  setzen wir $c=q$ und erhalten wegen $cq=1$, dass $c=q=\pm1$. Einsetzen
+  ergibt $c+pb+aq= 1-p^{2}+1=0\Rightarrow p=\sqrt{2}$. Aber $\sqrt{2}\notin\Q$
+  \lightning{}
  \item Faktorisieren Sie das Polynom $X^{24}-1$ in irreduzible Polynomemit
   Koeffizienten in $\R, \Q, \F_{2}, \F_{5}$ und $\F_{73}$.
 \end{enumerate}
