--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -5834,8 +5834,32 @@ von den anderen Inhalten zu betrachten.
   setzen wir $c=q$ und erhalten wegen $cq=1$, dass $c=q=\pm1$. Einsetzen
   ergibt $c+pb+aq= 1-p^{2}+1=0\Rightarrow p=\sqrt{2}$. Aber $\sqrt{2}\notin\Q$
   \lightning{}
- \item Faktorisieren Sie das Polynom $X^{24}-1$ in irreduzible Polynomemit
-  Koeffizienten in $\R, \Q, \F_{2}, \F_{5}$ und $\F_{73}$.
+ \item Faktorisieren Sie das Polynom $X^{24}-1$ in irreduzible Polynome mit
+  Koeffizienten in $\R, \Q, \F_{2}, \F_{5}$ und $\F_{73}$.\\
+  Sei $\zeta\in\C$ eine primitive $n$"~te Einheitswurzel, d.\,h. $\zeta^{n}=1$
+  und $\zeta^{i}\neq1$. Das Minimalpolynom von $\zeta$ über $\Q$ wird meist
+  mit $F_{n}$ bezeichnet und es gilt
+  \begin{gather*}
+    X^{n}-1 = \prod_{d\mid n} F_{d}
+  \end{gather*}
+  Für $n=24$ sind $\{1,2,3,4,6,8,12,24\}$ Teiler. Wegen der trivialen
+  primitiven Einheitswurzeln ist $F_{1}=X-1, F_{2}=X+1$. Weiter ergibt sich:
+  \begin{align*}
+    X^{3}-1 &= F_{1}\cdot F_{3} &\Rightarrow F_{3} &= \frac{X^{3}-1}{F_{1}}=
+       \frac{X^{3}-1}{X-1}= X^{2}+X+1\\
+    X^{4}-1 &= F_{1}\cdot F_{2}\cdot F_{4} &\Rightarrow F_{4} &=
+       \frac{X^{4}-1}{F_{1}\cdot F_{2}}= X^{2}+1\\
+    X^{6}-1 &= F_{1}\cdot F_{2}\cdot F_{3}\cdot F_{6} &\Rightarrow F_{6} &=
+       \frac{X^{6}-1}{F_{1}F_{2}F_{3}}= X^{2}-X+1\\
+    X^{8}-1 &= F_{1}F_{2}F_{4}F_{8} &\Rightarrow F_{8} &= X^{4}+1\\
+    X^{12}-1 &= F_{1}F_{2}F_{3}F_{4}F_{6}F_{12} &\Rightarrow F_{12} &=
+       X^{4}-X^{2}+1\\
+    X^{24}-1 &= F_{1}F_{2}F_{3}F_{4}F_{6}F_{8}F_{12}F_{24} &\Rightarrow F_{24}
+       &= X^{8}-X^{4}+1
+  \end{align*}
+  Über $\R[X]$ sind die Polynome $F_{1}, F_{2}, F_{3}, F_{4}, F_{6}$
+  irreduzibel, da $F_{1}, F_{2}$ vom Grad~1. Die anderen haben keine
+  Nullstelle in $\R$ und sind damit nicht zerlegbar. \todo{Andere ergänzen}
 \end{enumerate}
       
 \section*{11. Übungsserie}
