--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -348,7 +348,7 @@ Mit anderen Worten: $x(yz)=(xy)z$.
   Die deutsche Sprache hingegen ist nicht assoziativ: Urinstinkt.
 \end{bemerk}
 
-\begin{defini}
+\begin{defini}[Halbgruppe]
   Eine nichtleere Menge mit assoziativer Multiplikation heißt
   \highl{Halbgruppe}.
 \end{defini}
@@ -367,7 +367,7 @@ Wir verabreden folgende Bezeichnungen:
   Mengen gut eingeführt.
 \end{itemize}
 
-\begin{defini}
+\begin{defini}[neutrales Element]
   Ein Element $e\in S$ heißt \highl{neutrales Element}, wenn gilt $ex=xe=x$
   für alle $x\in S$.
 \end{defini}
@@ -376,7 +376,7 @@ Wir verabreden folgende Bezeichnungen:
   $e$ ist eindeutig. (ÜA)
 \end{bemerk}
 
-\begin{defini}
+\begin{defini}[Gruppe]
   Eine Halbgruppe $S$ mit neutralem Element $e$ heißt \highl{Gruppe}, wenn gilt:
   \begin{gather*}
    \forall x\in S\,\exists y\in S\colon xy=yx=e
@@ -429,7 +429,7 @@ Wir verabreden folgende Bezeichnungen:
   \end{enumerate}
 \end{bsp}
 
-\begin{defini}
+\begin{defini}[Homomorphismus]
   Seien $G, H$ zwei Gruppen, eine Abbildung $f\colon G\rightarrow H$ heißt
   \highl{Homomorphismus}, wenn gilt:
   \begin{gather*}
@@ -456,7 +456,7 @@ Wir verabreden folgende Bezeichnungen:
   \end{enumerate}
 \end{bsp}
 
-\begin{defini}
+\begin{defini}[Untergruppe]
   Eine \highl{Untergruppe} $H\subseteq G$ einer Gruppe $G$ ist eine Teilmenge,
   welche mit der aus $G$ geerbten Multiplikation selbst eine Gruppe ist,
   d.\,h.
@@ -482,7 +482,7 @@ Wir verabreden folgende Bezeichnungen:
   \end{proof}
 \end{fakt}
 
-\begin{defini}
+\begin{defini}[erzeugte Untergruppe]
   Die kleinste $S$ umfassende Untergruppe heißt die von $s$ \highl{erzeugte
   Untergruppe}. Bezeichnung: $\langle s\rangle$
 \end{defini}
@@ -576,7 +576,7 @@ Wir verabreden folgende Bezeichnungen:
   \end{proof}
 \end{fakt}
 
-\begin{defini}
+\begin{defini}[Kern]
   Der \highl{Kern} $\ker f$ eines Homomorphismus ist das Urbild des neutralen
   Elements.
 \end{defini}
@@ -631,7 +631,7 @@ Inverse.
   Der Kern ist $m\Z$.
 \end{bemerk}
 
-\begin{defini}
+\begin{defini}[Nebenklasse]
   Sei $G$ eine Gruppe und $H\subseteq G$ eine Untergruppe. Jede Menge
   $xH=\{xh\colon h\in H\}$ mit $x\in G$ heißt \highl[Nebenklasse!linke]{linke Nebenklasse} von $H$ in $G$.
 \end{defini}
@@ -661,7 +661,7 @@ Inverse.
   \end{enumerate}
 \end{bemerk}
 
-\begin{defini}
+\begin{defini}[Index]
   Der \highl{Index} von $H$ in $G$ ist definiert als die Anzahl der linken
   Nebenklassen von $H$ in $G$. Wir bezeichnen den Index mit $(G\colon H)$.
 \end{defini}
@@ -688,7 +688,7 @@ werden. Wir werden sehen, dass die zyklischen Gruppen entweder zu $(\Z,+)$
 oder zu $\Z/_{m\Z}$ isomorph sind. Man kann zyklische Gruppen auch als
 Drehgruppen regulärer Vielecke veranschaulichen.
 
-\begin{defini}
+\begin{defini}[zyklische Gruppe]
   Eine Gruppe heißt \highl{zyklisch}, wenn  $G=\langle
   x\rangle$ für ein $x\in G$ oder anders: $G$ lässt sich von einem Element
   erzeugen.
@@ -832,7 +832,7 @@ Drehgruppen regulärer Vielecke veranschaulichen.
 
 \section{Permutationsgruppen}
 
-\begin{defini}
+\begin{defini}[Permutationen]
   Sei $X$  ein Menge und $S (X)$ die Bijektionen auf dieser Menge. Dann
   $X =\{1, 2, \ldots, n\}, S_n = S (X)$.
 \end{defini}
@@ -864,7 +864,7 @@ Drehgruppen regulärer Vielecke veranschaulichen.
 \end{proof}
 \end{fakt}
 
-\begin{defini}
+\begin{defini}[Zyklus]
   Eine Permutation heißt \highl{Zyklus}, wenn
   $x_1, x_2, \ldots, x_m \in \{1, 2, \ldots, n\}$ $m \geq 2$, paarweise
   verschieden existieren, so dass
@@ -926,7 +926,7 @@ auf Reihenfolge eindeutig.
   Die Darstellung durch obige Transpositionen ist nicht eindeutig.
 \end{bemerk}
 
-\begin{defini}
+\begin{defini}[Signum]
   Das \highl{Signum} einer Permutation ist
   \begin{gather*}
     \sgn (\sigma) = \underset{\{i, j\}}{\prod} \frac{\sigma i - \sigma
@@ -964,7 +964,7 @@ auf Reihenfolge eindeutig.
   \end{enumerate}
 \end{defini}
 
-\begin{defini}
+\begin{defini}[alternierende Gruppe]
   Die \highl[Gruppe!alternierende]{alternierende Gruppe} $A_n$ ist die
   Untergruppe der Permutationen aus $S_n$ mit $\sgn (\sigma) = 1$.
   
@@ -991,7 +991,7 @@ N \Leftrightarrow s N = N s$. Beliebige Untergruppen haben nicht diese
 Eigenschaft: $G = S_3, N=\{\iota, (1, 2)\}$, z.\,B. $(1, 3) (1, 2) (1, 3)^{-
 1} = (1, 3) (1, 2) (1, 3) = (2, 3) \notin N$.
 
-\begin{defini}
+\begin{defini}[Normalteiler]
   Eine Untergruppe $H \subseteq G$ mit der Eigenschaft $sHs^{- 1} = H$ für
   alle $s \in G$ heißt \highl{Normalteiler} von $G$.
   
@@ -1050,7 +1050,7 @@ Multiplikation auf $G/_{H}$ mit $(xH)(yH)\coloneqq xyH$.
   $x^{-1}H$.
 \end{enumerate}
 
-\begin{defini}
+\begin{defini}[Faktorgruppe]
   Wir bezeichnen $G/_{H}$ als \highl{Faktorgruppe} von $G$ nach $H$.
 \end{defini}
 
@@ -1155,7 +1155,7 @@ Multiplikation auf $G/_{H}$ mit $(xH)(yH)\coloneqq xyH$.
 
 \section{Das direkte Produkt von Gruppen}
 
-\begin{defini}
+\begin{defini}[direktes Produkt]
   Seien $G_{1}, G_{2}$ zwei Gruppen. Dann wird $G_{1}\times G_{2}$ durch
   folgende Multiplikation zu einer Gruppe:
   \begin{gather*}
@@ -1390,8 +1390,8 @@ beschäftigt.
 
 \section{Endlich erzeugte abelsche Gruppen}
 
-\begin{defini}
-  Eine abelsche Gruppe $A$ heißt \highl{endlich erzeugt}, wenn es endlich
+\begin{defini}[endlich erzeugte Gruppe]
+  Eine abelsche Gruppe $A$ heißt \highl[Gruppe!endlich erzeugte]{endlich erzeugt}, wenn es endlich
   viele $x_{1},\dotsc, x_{n}\in G$ gibt, so dass gilt: $x=s_{1}x_{1}+\dotsb+
   s_{n} x_{n}\in A$ mit $s_{1},\dotsc, s_{n}\in\Z$.
   Weiter heißt $A$ \highl{frei}, wenn $A$ eine Basis
@@ -1553,7 +1553,7 @@ Lösungen in $m,n$.
 \section{Konjugation}
 Im folgenden betrachten wir nicht"=kommutative Operationen.
 
-\begin{defini}
+\begin{defini}[Konjugation]
   Sei $G$ eine Gruppe, $s\in G$. Die Abbildung:
   \begin{gather*}
     \sigma_{s}\colon G\rightarrow G, x\mapsto sxs^{-1}
@@ -1589,7 +1589,7 @@ Im folgenden betrachten wir nicht"=kommutative Operationen.
   von $G$.
 \end{bemerk}
 
-\begin{defini}
+\begin{defini}[Zentrum]
   Der Kern des Homomorphismus $G\rightarrow\Aut(G)$ heißt das \highl{Zentrum}
   von $G$. Also:
   \begin{gather*}
@@ -1620,7 +1620,7 @@ Im folgenden betrachten wir nicht"=kommutative Operationen.
 
 % Vorlesung vom 2007-11-16
 
-\begin{defini}
+\begin{defini}[konjugierte Gruppenelemente]
   Die Gruppenelemente $x,y\in G$ heißen \highl{konjugiert}, falls: $\exists
   s\in G\colon sxs^{-1}=y$.
 \end{defini}
@@ -1747,7 +1747,7 @@ Im folgenden betrachten wir nicht"=kommutative Operationen.
   \end{pmatrix}, r\neq0$.
 \end{bemerk}
 
-\begin{defini}
+\begin{defini}[Wirkung, Aktion]
   Sei $X$ eine Menge und $G$ eine Gruppe. Dann ist die  \highl{Aktion} oder
   \highl{Wirkung} einer Gruppe auf einer Menge die Abbildung $G\times
   X\rightarrow X, (s,x)\mapsto sx$ mit den Eigenschaften:
@@ -1770,7 +1770,7 @@ Im folgenden betrachten wir nicht"=kommutative Operationen.
   \end{enumerate}
 \end{bsp}
 
-\begin{defini}
+\begin{defini}[Bahn, Orbit]
   Es operiere $G$ auf $X$ und $x\in X$. Dann heißt $Gx=\{sx\colon s\in G\}$
   \highl{Bahn} oder \highl{Orbit} von $X$.
   Der \highl{Stabilisator} von $x$ ist $G_{x}=\{s\in G\colon sx=x\}$.
@@ -1797,7 +1797,7 @@ Im folgenden betrachten wir nicht"=kommutative Operationen.
   \end{proof}
 \end{fakt}
 
-\begin{defini}
+\begin{defini}[transitive Aktion]
   Besitzt $G$ auf $X$ nur eine Bahn, so heißt die Aktion \highl{transitiv}.
 \end{defini}
 
@@ -1812,7 +1812,7 @@ Im folgenden betrachten wir nicht"=kommutative Operationen.
 \end{bsp}
 
 \paragraph{Konjugierte Untergruppen}
-\begin{defini}
+\begin{defini}[konjugierte Untergruppen]
 Seien $H_{1}, H_{2}$ Untergruppen von $G$. Dann heißen sie genau dann
 konjugiert, wenn $\exists s\in G\colon sH_{1}s^{-1}=H_{2}$.
 \end{defini}
@@ -1829,7 +1829,7 @@ konjugiert, wenn $\exists s\in G\colon sH_{1}s^{-1}=H_{2}$.
 
 \section{Das \textsc{Sylow}-Paket}
 
-\begin{defini}
+\begin{defini}[\textsc{Sylow}"~Gruppe]
   Sei $G$ eine endliche Gruppe und $p\in\PP, \abs{G}=p^{n}\cdot q,
   \ggt(p,q)=1$. Jede Untergruppe $H\subseteq G$ mit Ordnung $p^{n}$ heißt
   p-\highl{\textsc{Sylow}"~Gruppe} in $G$, d.\,h. $H$ hat $p$"~Potenzordnung
@@ -1996,7 +1996,7 @@ konjugiert, wenn $\exists s\in G\colon sH_{1}s^{-1}=H_{2}$.
 
 \section{Endliche auflösbare Gruppen}
 
-\begin{defini}
+\begin{defini}[auflösbare Gruppe]
   Eine endliche Gruppe heißt \highl{auflösbar}, wenn sie eine
   \emph{Normalreihe} mit abelschen Faktoren besitzt:
   $\exists$ Folge von Untergruppen $(G_i)$, so dass gilt:
@@ -2146,7 +2146,7 @@ Motto: Weiche, Wotan, weiche.
 
 \section{Ringe und ihre Homomorphismen}
 
-\begin{defini}
+\begin{defini}[Ring]
   Ein \highl{Ring} ist eine nichtleere Menge $A$ mit zwei Operationen $+$
   und $\cdot$, so dass:
   \begin{enumerate}
@@ -2173,7 +2173,7 @@ Motto: Weiche, Wotan, weiche.
   Elemente.
 \end{defini}
 
-\begin{defini}
+\begin{defini}[Einheit]
   Sei $R$ ein kommutativer unitärer Ring. Wenn für $x,y\in R$ gilt, $x\cdot
   y=1$ gilt, heißen $x$ und $y$ \highl{Einheit}en.
 \end{defini}
@@ -2208,7 +2208,7 @@ Motto: Weiche, Wotan, weiche.
 %    \{0\}$.
 \end{bsp}
 
-\begin{defini}
+\begin{defini}[Ringhomomorphismus]
   Seien $A, B$ Ringe, $f\colon A \rightarrow B$ heißt
   \highl{Ringhomomorphismus}, wenn gilt:
   \begin{enumerate}
@@ -2226,7 +2226,7 @@ Wir wollen nun die Eigenschaften der Kerne von Homomorphismen betrachten.
 Hierzu sei $f\colon A \rightarrow B$ ein Homomorphismus, $A,B$ Ringe und $\fa=
 \ker (f)$.
 
-\begin{defini}
+\begin{defini}[Ideal]
   Ein $\fa \subset A$ heißt \highl{Ideal}, falls gilt:
   \begin{enumerate}
     \item $\fa$ ist Untergruppe bezüglich Addition und
@@ -2247,7 +2247,7 @@ Hierzu sei $f\colon A \rightarrow B$ ein Homomorphismus, $A,B$ Ringe und $\fa=
   \end{enumerate}
 \end{bsp}
 
-\begin{defini}
+\begin{defini}[Hauptideal]
   Sei $A$ ein Ring, $a \in A$. Dann heißt $(a) = a \cdot A$ \highl{Hauptideal}.
 \end{defini}
 
@@ -2383,7 +2383,7 @@ bezüglich $+$. Wir prägen $A/_{\fa}$ eine Multiplikation auf via
 Folgender "`Defekt"' ist möglich: $x\neq y\neq0$ mit $x,y\in A$. Aber es gilt
 $xy=0$.
 
-\begin{defini}
+\begin{defini}[Nullteiler, Integritätsbereich]
   Dann heißen $x,y$ \highl{Nullteiler}. Ein Ring heißt \highl{integer} oder
   \highl{Integritätsbereich}, wenn es keine Nullteiler gibt, d.\,h.
   $xy=0\Rightarrow x=0$ oder $y=0$.
@@ -2407,7 +2407,7 @@ $xy=0$.
   \end{proof}
 \end{fakt}
 
-\begin{defini}
+\begin{defini}[Primideal, maximales Ideal]
   \begin{enumerate}
    \item Ein Ideal $\fg\subseteq A$ mit $\fg\neq A$ heißt \highl{Primideal},
     wenn $A/_{\fg}$ integer ist.
@@ -2596,7 +2596,7 @@ Allgemeinen nicht prim (maximal), selbst für surjektive Homomorphismen.
 \section{Zur Teilbarkeitslehre in Integritätsbereichen}
 
 Sei $A$ integer.
-\begin{defini}
+\begin{defini}[Primelement, irreduzibel]
   Sei $a\in A$ mit $a\neq0$. Dann heißt $a$ \highl{Primelement} oder
   \highl{irreduzibel}, wenn $a$ keine Einheit ist und aus $a=xy$ mit $x,y\in
   A$ folgt, $x$ oder $y$ Einheit.
@@ -2620,7 +2620,7 @@ Sei $A$ integer.
   durch 21 teilbare Normen.
 \end{bemerk}
 
-\begin{defini}
+\begin{defini}[faktorieller Ring]
   Sei $A$ integer. Dann heißt $A$ \highl{faktoriell} oder
   \highl{ZPE"~Ring}\footnote{Zerlegung in Primelemente}, wenn jedes Element
   ungleich 0 eine Zerlegung in Primelemente besitzt und diese bis auf
@@ -2823,7 +2823,7 @@ Analog definiert man für
 trigonometrische Polynome: 
 $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
 
-\begin{defini}
+\begin{defini}[Polynom]
   Das Polynom in einer Unbestimmten über einem Ring in $A$ ist wie folgt
   definiert:
   \begin{align*}
@@ -2871,7 +2871,7 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
   mit endlichem Träger.
 \end{bemerk}
 
-\begin{defini}
+\begin{defini}[Grad eines Polynoms]
   Der \highl[Grad!Polynom]{Grad} eines Polynoms ungleich 0  
   ist folgende Abbildung:
   \begin{gather*}
@@ -2974,7 +2974,7 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
   \end{enumerate}
 \end{bsp}
 
-\begin{defini}
+\begin{defini}[Wurzel, Nullstelle]
   Sei $A$ ein Ring und $f\in A[X]\setminus\{0\}$. Dann heißt $a\in A$
   \highl{Wurzel} oder \highl{Nullstelle} von $f$, falls $F_{f}(a)=0$ mit
   $F_{f}\colon A\rightarrow A$.
@@ -3197,7 +3197,7 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
 \end{bsp}
 
 \paragraph{Mehrfache Wurzeln}
-\begin{defini}
+\begin{defini}[formale Ableitung]
   Sei $K$ ein Körper, $f\in K[X], f=a_{0}+ a_{1}X+\dotsb+a_{n}X^{n}$, Die
   \highl[Ableitung!formale]{formale Ableitung} von $f$ ist definiert durch
   $f'(X)= a_{1}+2a_{2}X+\dotsb+na_{n}X^{n-1}$.
@@ -3211,7 +3211,7 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
   \end{enumerate}
 \end{fakt}
 
-\begin{defini}
+\begin{defini}[Vielfachheit]
   Sei $f\in K[X]\setminus\{0\}$ und $\alpha\in K$ Wurzel von $f$. Die
   \highl{Vielfachheit} von $\alpha$ ist definiert als die natürliche Zahl $m$,
   so dass $f(X)= (X-\alpha)^{m}g(X)$ mit $g(\alpha)\neq0$ ist.
@@ -3231,7 +3231,7 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
 
 \section{Symmetrische Polynome}
 
-\begin{defini}
+\begin{defini}[symmetrisches Polynom]
   Sei $K$ ein Körper, $f\in K[X_{1},\dotsc, X_{n}]$. Das Polynom heißt
   \highl{symmetrisch}, wenn $f(X_{1},\dotsc, X_{n})= f(X_{\sigma(1)},\dotsc,
   X_{\sigma(n)})$ für alle $\sigma\in S_{n}$.
@@ -3382,7 +3382,7 @@ Ein Körper $K$ besitzt nur die beiden trivialen Ideale $\{0\}$ und $K$. Also
 ist jeder Homomorphismus $f\colon K\rightarrow L$ zwischen Körpern injektiv.
 Wir hatten für Ringhomomorphismen verlangt $f(1)=1$.
 
-\begin{defini}
+\begin{defini}[Unter"~/""Oberkörper, Körpererweiterung]
   Sei $K\subseteq L$. Weiter enthalte $K$ die 0 und 1 sowie sei mit den auf
   $K$ eingeschränkten Verknüofungen selbst ein Körper. Dann heißt $K$
   \highl{Unterkörper} oder
@@ -3394,7 +3394,7 @@ Wir hatten für Ringhomomorphismen verlangt $f(1)=1$.
   Der Durchschnitt von Unterkörpern ist wieder ein Unterkörper.
 \end{bemerk}
 
-\begin{defini}
+\begin{defini}[Primkörper]
   Der Durchschnitt aller Unterkörper eines Körpers $K$ heißt
   \highl{Primkörper} von $K$.
 \end{defini}
@@ -3425,7 +3425,7 @@ Wir hatten für Ringhomomorphismen verlangt $f(1)=1$.
 \end{proof}
 \end{fakt}
 
-\begin{defini}
+\begin{defini}[Charakateristik]
   Wenn der Primkörper zu $\Q$ isomorph ist, sagt man, $K$ hat die
   \highl{Charakteristik} von 0. Man schreibt $\chr(K)=0$. Wenn der Primkörper zu
   einem endlichen Körper $\F_{p}$ isomorph ist, gilt $\chr(K)=p$.
@@ -3444,7 +3444,7 @@ Wir hatten für Ringhomomorphismen verlangt $f(1)=1$.
 
 Ist $E/_F$ eine Körpererweiterung, so ist $E$ ein Vektorraum über $F$.
 
-\begin{defini}
+\begin{defini}[Grad der Körpererweiterung]
   Der \highl[Grad!Körpererweiterung]{Grad der Körpererweiterung} $E/_F$ ist
   $[E\colon F]\coloneqq \dim_{F} E$. Ist $E/_F$ endlich, so heißt auch
   die Erweiterung endlich.
@@ -3461,7 +3461,7 @@ Ist $E/_F$ eine Körpererweiterung, so ist $E$ ein Vektorraum über $F$.
   \end{enumerate}
 \end{bsp}
 
-\begin{defini}
+\begin{defini}[algebraisches Körperelement]
   Sei $E/_F$ Körpererweiterung, $\alpha \in E$. Dann heißt $\alpha$
   \highl{algebraisch} über $F$, wenn ein $n\geq1$ und $a_{i}\in F$ (nicht alle
   gleich 0) existieren, so dass $a_0 + a_1 \alpha + \ldots + a_n
@@ -3499,7 +3499,7 @@ Ist $E/_F$ eine Körpererweiterung, so ist $E$ ein Vektorraum über $F$.
   \end{enumerate}
 \end{bsp}
 
-\begin{defini}
+\begin{defini}[algebraische Körperwerweiterung]
   Eine Körpererweiterung $E/_F$ heißt
   \highl[Körpererweiterung!algebraische]{algebraisch}, wenn jedes Element aus
   $E$ algebraisch in $F$ ist.
@@ -3547,7 +3547,7 @@ Ist $E/_F$ eine Körpererweiterung, so ist $E$ ein Vektorraum über $F$.
 \end{proof}
 \end{satz}
 
-\begin{defini}
+\begin{defini}[Adjunktion]
   Sei $E/_K$ eine Körpererweiterung und $\alpha \in E$. Dann ist $K(\alpha)$
   der kleinste $\alpha$ umfassende Teilkörper. Man sagt, $K(\alpha)$ entsteht
   durch \highl{Adjunktion} von $\alpha$ zu $K$.
@@ -3624,7 +3624,7 @@ Ist $E/_F$ eine Körpererweiterung, so ist $E$ ein Vektorraum über $F$.
   K), \Irr(X, \beta, K)$, wohl aber für $\Irr(X, \alpha^{-1}, K)$.
 \end{bemerk}
 
-\begin{defini}
+\begin{defini}[Kompositum]
   Sei $K/_k$  eine Körpererweiterung, $k \subset E, F \subset
   K$ Zwischenkörper. Das \highl{Kompositum} von $E$ und $F$ ist der kleinste
   Teilkörper in $K$, welcher $E$ und $F$ umfasst. Bezeichnung $E \cdot F$.
@@ -3708,7 +3708,7 @@ Für jedes (nicht konstante) Polynom $f \in \C[X] \setminus
 %D.h. Jedes über $\C$ algebraische Element liegt schon in
 %$\C$.
 
-\begin{defini}
+\begin{defini}[algebraisch abgeschlossener Körper]
   Ein Körper $K$ heißt genau dann \highl[Körper!algebraisch
   abgeschlossen]{algebraisch abgeschlossen}, wenn jedes über $K$ algebraische
   Element schon in $K$ liegt bzw. wenn jedes Polynom aus $K[X]$ in  lineare
@@ -3735,7 +3735,7 @@ Für jedes (nicht konstante) Polynom $f \in \C[X] \setminus
   \end{proof}
 \end{satz}
 
-\begin{defini}
+\begin{defini}[algebraischen Abschluss]
   Man nennt solche $\overline{K}$ (etwas lax) den
   \highl[Abschluss!algebraischer]{algebraischen Abschluss}
   von $K$.
@@ -3900,7 +3900,7 @@ Im folgenden betrachten wir nun die Eindeutigkeit (zweiter Punkt des Satzes).
 
 Sei $K$ ein Körper und $\overline{K}$ ein fixierter algebraischer Abschluss.
 
-\begin{defini}
+\begin{defini}[Zerfällungskörper]
   Sei $f\in K[X]/_{K}$ ein nicht konstantes Polynom. Der
   \highl{Zerfällungskörper} $L$ von $f$ über $K$ ist
   $L=K(\alpha_{1},\dotsc,\alpha_{n})$, wobei
@@ -4043,7 +4043,7 @@ Sei $\overline{K}/_{K}$ fixierter algebraischer Abschluss, $L/_{K}$ endliche
 Erweiterung in $\overline{K}/_{K}$ und $\Hom_{K}(L, \overline{K})$ ist die
 Menge der Einlagerungen.
 
-\begin{defini}
+\begin{defini}[Separabilitätsgrad]
   Die Anzahl der Elemente in $\Hom_{K}(L,\overline{K})$ heißt
   \highl{Separabilitätsgrad} von $L/_{K}$. Dieser wird mit $[L\colon K]_{S}$
   bezeichnet.
@@ -4087,7 +4087,7 @@ Menge der Einlagerungen.
   \end{proof}
 \end{satz}
 
-\begin{defini}
+\begin{defini}[separable Körpererweiterung]
   \begin{enumerate}[(i)]
    \item   Es heißt $L/_{K}$ \highl{separabel}, wenn $[L\colon K]_{S}=[L\colon
     K]$.
@@ -4489,7 +4489,7 @@ Der Satz kam in der Vorlesung erst nach dem Beispiel mit $p=13$.
 \chapter{\textsc{Galois}"~Theorie}
 \section{\textsc{Galois}"~Erweiterungen}
 
-\begin{defini}
+\begin{defini}[\textsc{Galois}"~Erweiterung, \textsc{Galois}"~Gruppe]
   \begin{enumerate}
    \item Sei $K$ ein Körper. Eine Erweiterung $E/_{K}$ heißt
     \highl{\textsc{Galois}"~Erweiterung}, wenn sie endlich, normal und
@@ -4743,7 +4743,7 @@ $i$. Jedes Element aus $K$ ist $k$"~Linearkombination von Monomen in den
 $\alpha_{1},\dotsc,\alpha_{n}$. Also lässt $\sigma$ jedes Element aus $K$
 fest. Damit folgt $\sigma=\iota$ (Identität).
 
-\begin{defini}
+\begin{defini}[\textsc{Galois}gruppe]
   Das Bild von $\Gal(K/_{k})$ in $S(W)$ heißt \highl{\textsc{Galois}gruppe}
   von $f$.
 \end{defini}
@@ -4940,7 +4940,7 @@ $\overline{k}$ ist fixierter algebraischer Abschluss.
 
 Sei $f=X^{n}-1\in k([X])$.
 
-\begin{defini}
+\begin{defini}[Einheitswurzel]
   Die Menge der Wurzeln von $f$ heißt $\mu_{n}$ und man nennt die Elemente
   \highl{Einheitswurzel}n.
 \end{defini}
@@ -5081,7 +5081,7 @@ Sei $\mu_{n}\in k, a\in k, f=X^{n}-a\in k[X]$.
   \end{enumerate}
 \end{bemerk}
 
-\begin{defini}
+\begin{defini}[Radikal]
   Sei $\overline{k}/_{k}$ mit $\chr(k)=0$ gegeben. Dann heißt
   $\alpha\in\overline{k}$ ein \highl{Radikal} über $k$, wenn es eine endliche
   Folge von Körpern $k=K_{0}\subset K_{1}\subset\dotso \subset
@@ -5143,7 +5143,7 @@ Sei $\mu_{n}\in k, a\in k, f=X^{n}-a\in k[X]$.
   \end{proof}
 \end{fakt}
 
-\begin{defini}
+\begin{defini}[auflösbar durch Radikale]
   Ein nicht konstantes Polynom $f\in k[X]\setminus k$ heißt
   \highl[Radikale!auflösbar durch]{auflösbar durch Radikale}, wenn die Wurzeln
   von $f$ in $\overline{k}$ in $k_{\text{rad}}$ liegen.
@@ -5516,7 +5516,7 @@ Sei $f(X)= c_{0}+ c_{1}X+\dotsb+c_{m}X^{m}$.
   \end{enumerate}
 \end{bsp}
 
-\begin{defini}
+\begin{defini}[Funktor]
   \highl{Funktor}en sind Abbildungen zwischen Kategorien: $F\colon
   C\rightarrow D$. Es gehen Objekte auf Objekte: $X\mapsto F(X)$ und Funktoren
   auf Funktoren: $X\xrightarrow{f} Y\mapsto F(X)\xrightarrow{F(f)} F(Y)$ oder
