--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -3384,7 +3384,7 @@ Wir hatten für Ringhomomorphismen verlangt $f(1)=1$.
 
 \begin{defini}[Unter"~/""Oberkörper, Körpererweiterung]
   Sei $K\subseteq L$. Weiter enthalte $K$ die 0 und 1 sowie sei mit den auf
-  $K$ eingeschränkten Verknüofungen selbst ein Körper. Dann heißt $K$
+  $K$ eingeschränkten Verknüpfungen selbst ein Körper. Dann heißt $K$
   \highl{Unterkörper} oder
   \highl{Teilkörper} und $L$ \highl{Oberkörper} von $K$. Man nennt $L/_K$ auch
   \highl{Körpererweiterung}.
@@ -3483,7 +3483,7 @@ Ist $E/_F$ eine Körpererweiterung, so ist $E$ ein Vektorraum über $F$.
 \end{bemerk}
 
 \begin{fakt}
-  Sei $E/_F$ eine Körperwerweiterung, $a \in E$ algebraisch. Dann existiert
+  Sei $E/_F$ eine Körpererweiterung, $\alpha\in E$ algebraisch. Dann existiert
   ein eindeutig bestimmtes irreduzibles Polynom aus $F[X]$ mit höchstem
   Koeffizienten 1, welches $\alpha$ zur Wurzel hat. Es heißt
   \highl[Polynom!irreduzibles]{irreduzibles Polynom} von $\alpha$ bezüglich
@@ -3538,10 +3538,10 @@ Ist $E/_F$ eine Körpererweiterung, so ist $E$ ein Vektorraum über $F$.
       \alpha_m$. Weiter existieren $b_{i j} \in K$ mit $a_i = b_{i 1} \beta_1
       + \ldots + b_{i n} \beta_n$. Einsetzen zeigt: $\gamma$ ist
       $K$-Linearkombination der $\alpha_i \beta_j$.
-     \item[Lienare Unabhängigkeit] Sei $\sum c_{i j} \alpha_i \beta_j = 0$ mit
+     \item[Lineare Unabhängigkeit] Sei $\sum c_{i j} \alpha_i \beta_j = 0$ mit
       $c_{i j} \in K$. Dann folgt, $\sum_{i=1}^{n}
       \underbrace{\left(\sum_{j=1}^{n} c_{ij} \beta_{j}\right)}_{\in F}
-      \alpha_{i} \Rightarrow \sum_{j=1}^{n} c_{ij} b_{j}=0\,\forall
+      \alpha_{i} \Rightarrow \sum_{j=1}^{n} c_{ij} \beta_{j}=0\,\forall
       i\Rightarrow c_{ij}=0$.
     \end{itemize}
 \end{proof}
@@ -3585,12 +3585,13 @@ Ist $E/_F$ eine Körpererweiterung, so ist $E$ ein Vektorraum über $F$.
     $K(\alpha)$.
 
     Andererseits ist das Bild von $K[X]$ in $K(\alpha)$ enthalten. Mithin
-    entsteht ein Isomorphismus $K[X]/_{(p(X))} \rightarrow K(X)$.
+    entsteht ein Isomorphismus $K[X]/_{(p(X))} \rightarrow K(\alpha)$.
+    \help{Muss da ein $\alpha$ oder ein $X$ hin?}
   
     Sei $\deg(\Irr (X, \alpha, K)) = n$. Wir zeigen, dass $1, \alpha, \ldots,
     \alpha^{n - 1}$ linear unabhängig sind: $\sum_{j=0}^{n-1} a_j \alpha^j =
     0$ für  $a_j \in K$. Sei $g(X) = \sum a_j X^j$. Dann ist $g(\alpha) = 0
-    \Rightarrow p$ teilt $g\lightning$. Somit $[K(\alpha)\colon K] \geq n$.
+    \Rightarrow p$ teilt $g$\lightning. Somit $[K(\alpha)\colon K] \geq n$.
 
     Wir zeigen nun, dass die $1, \alpha, \ldots, \alpha^{n - 1}$ den
     Vektorraum $K(\alpha)$ über $K$ erzeugen: Jedes Element aus $K(\alpha)$
@@ -3756,7 +3757,7 @@ Für jedes (nicht konstante) Polynom $f \in \C[X] \setminus
 
 \begin{fakt}
   Sei $K$ ein (nicht notwendigerweise abzählbarer) Körper  und $f \in
-  K[X]\setminus K$. Dann exisitert eine Erweiterung $E/_K$, in welcher $f$
+  K[X]\setminus K$. Dann existiert eine Erweiterung $E/_K$, in welcher $f$
   eine Wurzel besitzt.
   \begin{proof}
     Sei o.\,B.\,d.\,A. $f$ $p$"~irreduzibel über $K$. Wir haben den
@@ -4091,7 +4092,7 @@ Menge der Einlagerungen.
   \begin{enumerate}[(i)]
    \item   Es heißt $L/_{K}$ \highl{separabel}, wenn $[L\colon K]_{S}=[L\colon
     K]$.
-   \item Es heißt $\alpha\in\overline{K}$ genau dann \highl{separabel}/$K$,
+   \item Es heißt $\alpha\in\overline{K}$ genau dann \highl{separabel} über $K$,
     wenn $\Irr(X,\alpha,K)$ keine mehrfachen Wurzeln hat.
   \end{enumerate}
 \end{defini}
@@ -4111,13 +4112,13 @@ Menge der Einlagerungen.
 
 \begin{bemerk}
   \begin{enumerate}
-   \item $\chr(K)=0\Rightarrow\forall\alpha\in K\colon\alpha$ separabel/$K$.
-   \item Später: Jedes $\alpha\in\overline{\F}_{p}$ ist separabel/$\F_{p}$.
+   \item $\chr(K)=0\Rightarrow\forall\alpha\in K\colon\alpha$ separabel über $K$.
+   \item Später: Jedes $\alpha\in\overline{\F}_{p}$ ist separabel über $\F_{p}$.
    \item Sei $K$ der Quotientenkörper von $\F_{p}[t]$. Wähle ein Polynom $f\in
     K[X]$ mit $f=X^{p}-t$. Das ist irreduzibel nach \textsc{Eisenstein}
     (\autoref{satz:7-eisenstein}). Sei $\xi\in\overline{K}$ eine Wurzel von $f$. Dann gilt
     $(X-\xi)^{p}=X^{p}-\xi^{p}=X^{p}-t$, d.\,h. $f$ hat eine $p$"~fache
-    Wurzel. Das bedeutet, $\xi$ ist inseparabel/$K$.    
+    Wurzel. Das bedeutet, $\xi$ ist inseparabel über $K$.    
   \end{enumerate}
 
   Man beachte, $f'(X)=0$.
@@ -4128,7 +4129,7 @@ Menge der Einlagerungen.
   Sei $\chr(K)=p>0, \alpha\in\overline{K}, p=\Irr(X,\alpha,K)$. Dann gibt es
   eine natürliche Zahl $n\in\N\cup\{0\}$, so dass jede Wurzel von $p$ in
   $\overline{K}$ die Vielfachheit $p^{n}$ hat. Es gilt, $[K(\alpha)\colon K]=
-  p^{n}[K(\alpha)\colon K]_{S}$ und weiter ist $\alpha^{p^{n}}$ separabel/$K$.
+  p^{n}[K(\alpha)\colon K]_{S}$ und weiter ist $\alpha^{p^{n}}$ separabel über $K$.
   \begin{proof}
     Seien $\alpha=\alpha_{1},\dotsc,\alpha_{r}$ die verschiedenen Wurzeln von
     $p$ in $\overline{K}$ und $m_{1}$ die Vielfachheit von $\alpha_{1}$. Für
@@ -4183,7 +4184,7 @@ Menge der Einlagerungen.
 %satz 12
 \begin{satz}
   Sei $L/_{K}$ endlich. Dann ist $L/_{K}$ genau dann separabel, wenn jedes
-  $\alpha\in L$ separabel/$K$ ist.
+  $\alpha\in L$ separabel über $K$ ist.
   \begin{proof}
     \begin{itemize}
      \item[$\Rightarrow$] Sei $L/_{K}$ separabel und $\alpha\in L$. Nach dem
@@ -4192,7 +4193,7 @@ Menge der Einlagerungen.
       K]_{i}=1$.
      \item[$\Leftarrow$] Wir können schreiben:
       $L=K(\alpha_{1},\dotsc,\alpha_{n})$. Nach Voraussetzung sind alle
-      $\alpha_{i}$ separabel/$K$. Eine leichte Induktion und die Turmformel
+      $\alpha_{i}$ separabel über $K$. Eine leichte Induktion und die Turmformel
       zeigt, $[L\colon K]_{i}=1$.
     \end{itemize}
   \end{proof}
@@ -4200,7 +4201,7 @@ Menge der Einlagerungen.
 
 \begin{bemerk}
   Wir haben sogar gezeigt: Ist $L=K(\alpha_{1},\dotsc,\alpha_{n})$ und sind
-  die $\alpha_{i}$ separabel/$K$, so auch $L/_{K}$, also \emph{alle} Elemente
+  die $\alpha_{i}$ separabel über $K$, so auch $L/_{K}$, also \emph{alle} Elemente
   in $L$.
 \end{bemerk}
 
@@ -4219,7 +4220,7 @@ Menge der Einlagerungen.
   \begin{proof}
     \begin{enumerate}[(i)]
      \item Folgt sofort aus der Turmformel für $[\cdot,\cdot]_{i}$.
-     \item Ist $\alpha\in E$ separabel/$K$, so erst recht über $L$.
+     \item Ist $\alpha\in E$ separabel über $K$, so erst recht über $L$.
      \item Ist formale Folgerung aus obigen Punkten..
     \end{enumerate}
   \end{proof}
@@ -4242,7 +4243,7 @@ Menge der Einlagerungen.
     ($\sigma|E_{\text{sep}}=\iota$). Sei nun $\alpha\in E$ und
     $E_{\text{sep}}\supset E_{\text{sep}}(\alpha^{p^{n}})\supset
     E_{\text{sep}}$. Also ist $\alpha^{p^{n}}$ in $E$ separabel enthalten
-    ($\alpha^{p^{n}}\in E_{\text{sep}}$), da $\alpha^{p^{n}}$ separabel/$K$
+    ($\alpha^{p^{n}}\in E_{\text{sep}}$), da $\alpha^{p^{n}}$ separabel über $K$
     ist. Hieraus folgt, $\alpha$ ist Wurzel eines Polynoms $X^{p^{n}}-\beta$
     mit $\beta\in E_{\text{sep}}$. Es ist
     $\beta=\alpha^{p^{n}}\Rightarrow\sigma\alpha$ auch. Die Wurzeln von
@@ -4338,7 +4339,7 @@ Der Satz kam in der Vorlesung erst nach dem Beispiel mit $p=13$.
     Sei $\tau\colon\F_{p^{n}}\rightarrow\F_{p^{n}}$ ein Automorphismus. Die
     Anzahl der Einbettungen $\F_{p^{n}}\rightarrow\overline{\F}_{p}$ ist
     kleiner oder gleich $[\F_{p^{n}}\colon\F_{p}]=n$. Es ist $\F_{p^{n}}$
-    normal/$\F_{p}$. Also hat $\Aut(\F_{p^{n}}/_{\F_{p}})$ höchstens und damit
+    normal über $\F_{p}$. Also hat $\Aut(\F_{p^{n}}/_{\F_{p}})$ höchstens und damit
     genau $n$ Elemente.
   \end{proof}
 \end{satz}
@@ -4427,7 +4428,22 @@ Der Satz kam in der Vorlesung erst nach dem Beispiel mit $p=13$.
 
 \begin{bsp}
   Sei $p=13$. Es ist $\phi(12)=\phi(4)\phi(3)=2\cdot2=4$. Welche Untergruppe
-  erzeugt die 2: $2,4,8,3,6,12,11,9,5,10,7,1$ und die Ordnung ist 12.
+  erzeugt die 2:
+  \begin{alignat*}{2}
+    2^{1} &= 2 &\Rightarrow 2 &\equiv 2\pmod{13}\\
+    2^{2} &= 4 &\Rightarrow 4 &\equiv 4\pmod{13}\\
+    2^{3} &= 8 &\Rightarrow 8 &\equiv 8\pmod{13}\\
+    2^{4} &= 16 &\Rightarrow 16 &\equiv 3\pmod{13}\\
+    2^{5} &= 32 &\Rightarrow 32 &\equiv 6\pmod{13}\\
+    2^{6} &= 64 &\Rightarrow 64 &\equiv 12\pmod{13}\\
+    2^{7} &= 128 &\Rightarrow 128 &\equiv 11\pmod{13}\\
+    2^{8} &= 256 &\Rightarrow 256 &\equiv 9\pmod{13}\\
+    2^{9} &= 512 &\Rightarrow 512 &\equiv 5\pmod{13}\\
+    2^{10} &= 1024 &\Rightarrow 1024 &\equiv 10\pmod{13}\\
+    2^{11} &= 2048 &\Rightarrow 2048 &\equiv 7\pmod{13}\\
+    2^{12} &= 4096 &\Rightarrow 4096 &\equiv 1\pmod{13}
+  \end{alignat*}
+  Die Ordnung ist 12.
   Welche Untergruppe erzeugt die 3: $3, 9, 1$ und die Ordnung ist 3. Die 4 ist kein Primitivwurzel
   und die Ordnung von 4 ist 6. Welche Untergruppe erzeugt die 5: $5,
   -1\Rightarrow5^{4}= 1$ und die Ordnung ist 4. Welche Untergruppe erzeugt die
@@ -4461,7 +4477,7 @@ Der Satz kam in der Vorlesung erst nach dem Beispiel mit $p=13$.
     \begin{enumerate}[1. F{a}ll]
      \item Sei $K$ endlich. Dann ist $E^{*}$ zyklisch. Jedes Erzeugende ist
       primitives Element.
-     \item Sei $K$ unendlich. Dann ist $E$ endlich erzeugt/$K$:
+     \item Sei $K$ unendlich. Dann ist $E$ endlich erzeugt über $K$:
       $E=K(\alpha_{1},\dotsc,\alpha_{n})$. Sei zuerst $E=K(\alpha, \beta)$ mit
       $\alpha, \beta$ algebraisch und separabel über $K$. Wir definieren,
       $f(X)\coloneqq \prod_{i\neq j} (\sigma_{i}\alpha+ X\sigma_{i}\beta-
@@ -5319,7 +5335,7 @@ Milde Verallgemeinerung:
 Man konstruiere (mit Zirkel und Lineal) die Seitenlänge eines Kubus vom
 Volumen~2. Übersetzt in unser Kalkül: Ist $\sqrt[3]{2}\in r_{2}(\Q)$? Die
 Antwort ist offensichtlich: Nein! Denn $f=X^{3}-2\in\Q[X]$ ist irreduzibel in
-$\Q$ nach \textsc{Eisenstein}. Also ist $[\Q(\sqrt[3]{2}\colon\Q]=3]$. Denn
+$\Q$ nach \textsc{Eisenstein}. Also ist $[\Q(\sqrt[3]{2})\colon\Q]=3]$. Denn
 wäre $\sqrt[3]{2}\in r_{2}(\Q)$, so wäre $[\Q(\sqrt[3]{2})\colon\Q]=2^{N}$
 \lightning{}
 
@@ -5387,9 +5403,9 @@ $r_{2}(\Q)$?
 \end{bemerk}
 
 \paragraph{Dreiteilung von Winkeln}
-Manchmal geht es und manchmal nicht. Der Winkel von 60\textdegree* ist
+Manchmal geht es und manchmal nicht. Der Winkel von 60\textdegree ist
 konstruierbar. Das regelmäßige Sechseck ist konstruierbar. Der Winkel von
-60\textdegree* ist nicht dreiteilbar, da das regelmäßige 18"~Eck \emph{nicht}
+60\textdegree ist nicht dreiteilbar, da das regelmäßige 18"~Eck \emph{nicht}
 konstruierbar ist.
 
 \paragraph{Konstruktion von Dreiecken mit zwei gegebenen Seitenlängen und der
@@ -5757,7 +5773,7 @@ von den anderen Inhalten zu betrachten.
  \item Sei $A$ eine abelsche Gruppe und $B$ Untergruppe in $A$. Zeigen Sie:
   \begin{enumerate}
    \item Ist $A$ endlich erzeugt, so auch $B$.
-   \item Sind $B$ und $A/_{B}$ endlich erzeugt, so auch \help{Was?}
+   \item Sind $B$ und $A/_{B}$ endlich erzeugt, so auch $A$.
   \end{enumerate}
 \end{enumerate}
 
