--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -185,21 +185,28 @@ Gesamtheit einsetzt.
 Durch folgende sprachliche Gebilde wird die Aussageform
 quantifiziert:
 \begin{itemize}
-\item $\forall\,x$: für alle
-\item $\exists\,x$: es gibt (mind.) ein
+\item $\forall\,x$: für alle (wird manchmal auch mit $\bigwedge$ bezeichnet)
+\item $\exists\,x$: es gibt (mind.) ein (wird manchmal auch mit $\bigvee$
+  bezeichnet)
 \end{itemize}
 
 \paragraph{Bausteine der Prädikatenlogik (Quantorenlogik)}
+Diese Bausteine erlauben es uns, Aussagen zu formalisieren und dann auf
+Gültigkeit zu prüfen. Die einzelnen Aussagen werden so zu größeren Einheiten
+verbunden.
 \begin{itemize}
-\item $\forall x (p(x)\Rightarrow q(x))$ Für jedes $x$ mit der
+\item $\forall x (p(x)\Rightarrow q(x))$ Bedeutung: Für jedes $x$ mit der
   Eigenschaft $p(x)$ folgt die Eigenschaft $q(x)$.
-\item $\exists x (p(x)\wedge q(x))$ Es gibt ein $x$ mit der Eigenschaft
+\item $\exists x (p(x)\wedge q(x))$ Bedeutung: Es gibt ein $x$ mit der Eigenschaft
   $p(x)$ \emph{und} der Eigenschaft $q(x)$.
 \end{itemize}
 
 \paragraph{Negation quantorenlogischer Aussagen}
+Es ist sehr oft sinnvoll, die Negation der obigen Aussagen zu betrachten.
+Unten finden sich die aussagenlogischen Äquivalente der Bausteine der
+Prädikatenlogik.
 \begin{align*}
-  \forall x (p(x)\Rightarrow q(x)) &\equiv \exists x (p(x)\wedge
+  \overline{\forall x (p(x)\Rightarrow q(x))} &\equiv \exists x (p(x)\wedge
 \overline{q(x)}) &
   \overline{\exists x (p(x) \wedge q(x))}&\equiv \forall x
 (p(x)\Rightarrow \overline{q(x)})   
@@ -209,36 +216,34 @@ quantifiziert:
 
 \begin{definition}
   Seien $X,Y$ zwei nichtleere Mengen. Eine \highl{Teilmenge}
-  $f\subseteq X\times Y:=\{(x,y)\colon x\in X \wedge y\in Y\}$ mit der
+  $f\subseteq X\times Y\coloneqq \{(x,y)\colon x\in X \wedge y\in Y\}$ mit der
   Eigenschaft
-  \[\forall x \in X \ \forall y_1\in Y \ \forall y_2\in Y (((x,y_1)\in
+  \[\forall x \in X \,\forall y_1\in Y \,\forall y_2\in Y (((x,y_1)\in
   f\wedge (x,y_2)\in f)\Rightarrow y_1=y_2)\]
-  heißt \highl{Abbildung} (\highl{Funktion})
-  von $X$ in $Y$.
+  heißt \highl{Abbildung} oder \highl{Funktion} von $X$ in $Y$.
 \end{definition}
 
-Schreibweise: $f\colon X\rightarrow Y \qquad x\mapsto f(x)$
+Wir schreiben hierfür: $f\colon X\rightarrow Y, x\mapsto f(x)$
 
 In Worten: Unter einer Abbildung (Funktion) $f$ von $X$ in $Y$
 versteht man eine Vorschrift, die jedem $x\in X$ \emph{genau ein} $y
 \in Y$ zuordnet und nennen es \highl{Bild} oder
-\highl{Wert} der Abbildung $f$ an der Stelle $x$.
-
-$X$ heißt \highl{Urbildmenge} (\highl{Definitionsbereich}).
+\highl{Wert} der Abbildung $f$ an der Stelle $x$. Das
+$X$ heißt \highl{Urbildmenge} oder \highl{Definitionsbereich}.
 
 \paragraph{Komposition (Hintereinanderausführung, Verkettung)}
 \begin{definition}
   Seien $X,Y,Z$ nichtleere Mengen und $f\colon X\rightarrow Y,
   g\colon Y\rightarrow Z$ zwei Abbildungen. Dann heißt die Abbildung $g\circ
-  f\colon X\rightarrow Z$, wobei $(g\circ f)(x):=g(f(x)), x\in X$
-  \highl{Komposition} (Hintereinanderausführung) der
+  f\colon X\rightarrow Z$, wobei $(g\circ f)(x)\coloneqq g(f(x))$ mit $x\in X$
+  \highl{Komposition} oder \highl{Hintereinanderausführung} der
   Abbildung $f$ und $g$.
 \end{definition}
 
 \paragraph{Inverse Abbildungen (Funktionen)}
 \begin{definition}
   Seien $X,Y$ zwei nichtleere Mengen und $f\colon X\rightarrow Y$
-  bijketiv. Dann heißt $f^{-1}\colon Y\rightarrow X, f(x)\mapsto x$
+  bijektiv. Dann heißt $f^{-1}\colon Y\rightarrow X, f(x)\mapsto x$
   \highl[Abbildung!inverse]{inverse Abbildung} oder
   \highl{Umkehrabbildung}.
 \end{definition}
